@@ -62,6 +62,7 @@
    - ofoEntry: migrate to G_ADD_PRIVATE (todo #994).
    - ofoLedger: migrate to G_ADD_PRIVATE (todo #994).
    - ofoOpeTemplate: migrate to G_ADD_PRIVATE (todo #994).
+   - ofoRate: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
  Version 0.48
